--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ nav .fas{
         text-align: left;
         z-index: 2;
         transition: 1s;
+        display: none;
     }
     nav .fas{
         display: block;
