--- a/style.css
+++ b/style.css
@@ -320,3 +320,51 @@ h2{
     color: #f44336;
     cursor: pointer;
 }
+
+
+
+
+
+
+
+/*  ABOUT US PAGE */
+
+.sub_navigation{
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/background.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+.sub_navigation h1{
+    margin-top: 100px;
+}
+.about_us{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+.about_col{
+    flex-basis: 42%;
+    padding: 30px 2px;
+}
+.about_col img{
+    width: 100%;
+}
+.about_col h1{
+    padding-top: 0;
+}
+.about_col p{
+    padding: 15px 0 25px;
+}
+.red_btn{
+    border: 1px solid #f44336;
+    background: transparent;
+    color: #f44336;
+}
+.red_btn:hover{
+    color: #fff;
+}
